--- a/remote/Cargo.toml
+++ b/remote/Cargo.toml
@@ -23,7 +23,7 @@ time = "0.3.41"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-postgres = "0.7.13"
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
-datalust_logger = { path = "/git/datalust_logger" }
+datalust_logger = { git = "https://github.com/Dissssy/datalust_logger" }
 log = "0.4.27"
 actix-files = "0.6.6"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
