local downloading works now

--- a/.cargo/config.example.toml
+++ b/.cargo/config.example.toml
@@ -10,3 +10,4 @@ POSTGRES_DB = "pitsu database name"
 SEQ_API_KEY = "your-seq-api-key"
 SEQ_API_URL = "http://your-seq-server:5341"
 SEQ_LOG_LEVEL = "warn"
+PITSU_PUBLIC_URL = "http://your-pitsu-server:8080"
