--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -1,6 +1,18 @@
 [package]
 name = "pitsu"
-version = "0.0.0"
+version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pitsu-lib = { path = "../shared" }
+datalust_logger = { git = "https://github.com/Dissssy/datalust_logger" }
+iced = { version = "0.13.1", features = ["tokio"] }
+dirs = "6.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.8.23"
+lazy_static = "1.5.0"
+anyhow = "1.0.98"
+log = "0.4.27"
+reqwest = { version = "0.12.20", features = ["json"] }
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
+rfd = { version = "0.15.3", features = ["tokio"] }
