--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -13,6 +13,6 @@ toml = "0.8.23"
 lazy_static = "1.5.0"
 anyhow = "1.0.98"
 log = "0.4.27"
-reqwest = { version = "0.12.20", features = ["json"] }
+reqwest = { version = "0.12.20", features = ["json", "multipart", "stream"] }
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
 rfd = { version = "0.15.3", features = ["tokio"] }
