--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -15,3 +15,6 @@ uuid = { version = "1.4.0", features = ["serde", "v4"] }
 futures = "0.3.31"
 tokio-rayon = "2.1.0"
 rayon = "1.10.0"
+base64 = "0.22.1"
+lazy_static = "1.5.0"
+flate2 = "1.1.2"
