--- a/.cargo/config.example.toml
+++ b/.cargo/config.example.toml
@@ -7,7 +7,11 @@ POSTGRES_PASSWORD = "postgres password"
 POSTGRES_HOST = "localhost"
 POSTGRES_PORT = "5432"
 POSTGRES_DB = "pitsu database name"
-SEQ_API_KEY = "your-seq-api-key"
+REMOTE_SEQ_API_KEY = "your-remote-seq-api-key"
+LOCAL_SEQ_API_KEY = "your-local-seq-api-key"
 SEQ_API_URL = "http://your-seq-server:5341"
 SEQ_LOG_LEVEL = "warn"
 PITSU_PUBLIC_URL = "http://your-pitsu-server:8080"
+INVITE_CODE_SUFFIX = "your-invite-code-secret-end"
+INVITE_CODE_PREFIX = "your-invite-code-secret-start"
+INVITE_CODE_ENCRYPTION_KEY = "your-invite-code-encryption-key"
