--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -23,6 +23,7 @@ include-flate = "0.3.0"
 image = "0.25.6"
 resvg = "0.45.1"
 clipboard-rs = "0.3.0"
+open = "5.3.2"
 
 [build-dependencies]
 embed-resource = "3.0.5"
