--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 pitsu-lib = { path = "../shared" }
 datalust_logger = { git = "https://github.com/Dissssy/datalust_logger" }
 dirs = "6.0.0"
-eframe = { version = "0.31.1", features = ["persistence"] }
-egui_extras = { version = "0.31.1", features = ["all_loaders"] }
+eframe = { version = "0.32.0", features = ["persistence"] }
+egui_extras = { version = "0.32.0", features = ["all_loaders"] }
 # egui_nerdfonts = "0.1.3"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.109"
 toml = "0.9.0"
 lazy_static = "1.5.0"
 anyhow = "1.0.98"
@@ -24,6 +25,7 @@ image = "0.25.6"
 resvg = "0.45.1"
 clipboard-rs = "0.3.0"
 open = "5.3.2"
+colors-transform = "0.2.11"
 
 [build-dependencies]
 embed-resource = "3.0.5"
