--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -26,6 +26,7 @@ resvg = "0.45.1"
 clipboard-rs = "0.3.0"
 open = "5.3.2"
 colors-transform = "0.2.11"
+self_update = "0.42.0"
 
 [build-dependencies]
 embed-resource = "3.0.5"
