--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -27,7 +27,8 @@ clipboard-rs = "0.3.0"
 open = "5.3.2"
 colors-transform = "0.2.11"
 self_update = "0.42.0"
+sha2 = "0.10.9"
+base64 = "0.22.1"
 
 [build-dependencies]
-embed-resource = "3.0.5"
 winresource = "0.1.23"
