--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -30,6 +30,7 @@ colors-transform = "0.2.11"
 self_update = "0.42.0"
 sha2 = "0.10.9"
 base64 = "0.22.1"
+windows-elevate = "0.1.0"
 
 [build-dependencies]
 winresource = "0.1.23"
