--- a/remote/Cargo.toml
+++ b/remote/Cargo.toml
@@ -28,3 +28,7 @@ log = "0.4.27"
 actix-files = "0.6.6"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 actix-multipart = "0.7.2"
+async-walkdir = "2.1.0"
+lazy_static = "1.5.0"
+aws-sdk-s3 = "1.103.0"
+aws-config = "1.8.5"
