Refactor S3 integration: update file handling logic and improve database interactions

--- a/.cargo/config.example.toml
+++ b/.cargo/config.example.toml
@@ -15,10 +15,10 @@ PITSU_PUBLIC_URL = "http://your-pitsu-server:8080"
 INVITE_CODE_SUFFIX = "your-invite-code-secret-end"
 INVITE_CODE_PREFIX = "your-invite-code-secret-start"
 INVITE_CODE_ENCRYPTION_KEY = "your-invite-code-encryption-key"
-S3_BUCKET_NAME = "your-s3-bucket-name"
-S3_REGION = "your-s3-region"
-S3_ACCESS_KEY_ID = "your-s3-access-key-id"
-S3_SECRET_ACCESS_KEY = "your-s3-secret-access-key"
+AWS_BUCKET_NAME = "your-s3-bucket-name"
+AWS_REGION = "your-s3-region"
+AWS_ACCESS_KEY_ID = "your-s3-access-key-id"
+AWS_SECRET_ACCESS_KEY = "your-s3-secret-access-key"
 
 # PITSU_API_KEY_PLACEHOLDER = "your-pitsu-api-key-placeholder"
 
